🙆📊 Checkpoint ./aboutme.html:22516587/1248

--- a/aboutme.html
+++ b/aboutme.html
@@ -18,7 +18,7 @@
     </header>
     <main>
       <p>
-        
+        Hi guys, my name is Jared Denning and I am a Computer Science major here at BYU-I! I am interested a little in the data sciences for the machine learning aspect and a bit into the applications of classification algorythims for computer vision. Web development is my least favorite topic in programming/mark-ups but I am excited to learn about more than web development in this class.<br> I have several hobbies, and the list is currently growing so here goes haha. I am super outdoorsy first of all, so I am on a journey to hike the highest peaks in the states. I have done Mt. Borah, Kings Peak, and Mt. Whitney(highest point in the continental U.S). I have also recently got into rock-climbing and you can find me at the rock gym a lot of nights. During the semesters I always have a soccer or futsal team and might do softball this semester too!. <br> I am not working this semester, just hoping to concentrate on my education and all of my courses. I am excited to work with you guys this semester!
       </p>
     </main>
   </body>
