--- a/aboutme.html
+++ b/aboutme.html
@@ -5,7 +5,9 @@
   </head>
   <body>
     <h1>
-      About Me
+      About Me <br>
+      <img alt = "Me on King's Peak" src = "https://cdn.glitch.com/30e1a553-26a7-4c81-81be-74f507c3c666%2Fme.jpg?v=1600289460289" width="300">
+      
     </h1>
     <h2>
       Jared
