🍞📖 Checkpoint ./.glitch-assets:22516587/391 ./aboutme.html:22516587/3778

--- a/aboutme.html
+++ b/aboutme.html
@@ -1,27 +1,82 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>All abot Me</title>
-  </head>
-  <body>
-    <h1>
-      About Me <br>
-      <img alt = "Me on King's Peak" src = "https://cdn.glitch.com/30e1a553-26a7-4c81-81be-74f507c3c666%2Fme.jpg?v=1600289460289" width="300">
-      
-    </h1>
-    <h2>
-      Jared
-    </h2>
-    <header><nav><ul>
-      <li><a href="index.html>">Home</a></li>
-      <li><a href="aboutme.html>">About Me</a></li>
-      </ul>
-      </nav>
-    </header>
-    <main>
-      <p>
-        Hi guys, my name is Jared Denning and I am a Computer Science major here at BYU-I! I am interested a little in the data sciences for the machine learning aspect and a bit into the applications of classification algorythims for computer vision. Web development is my least favorite topic in programming/mark-ups but I am excited to learn about more than web development in this class.<br> I have several hobbies, and the list is currently growing so here goes haha. I am super outdoorsy first of all, so I am on a journey to hike the highest peaks in the states. I have done Mt. Borah, Kings Peak, and Mt. Whitney(highest point in the continental U.S). I have also recently got into rock-climbing and you can find me at the rock gym a lot of nights. During the semesters I always have a soccer or futsal team and might do softball this semester too!. <br> I am not working this semester, just hoping to concentrate on my education and all of my courses. I am excited to work with you guys this semester!
-      </p>
-    </main>
-  </body>
+
+<head>
+<style>
+h1 {
+    font: icon;
+    font-size: 250%;
+}
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
+</style>
+  <meta charset="utf-8">
+  <title>Jared Denning's Homepage</title>
+  <meta name="author" content="">
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link href="css/style.css" rel="stylesheet">
+</head>
+
+<body>
+
+  <h1>Welcome to Jared Denning's Homepage</h1>
+  <hr>
+  <p><a href="index.html" target="_blank"><b>Index</b></p></a>
+  <hr>
+  <p>About me</p>
+  <ul>
+      <li>Name: Jared Denning</li>
+      <li>Major: Computer Science</li>
+      <li>From: District of Columbia</li>
+  </ul>
+<blockquote cite="http://quotegeek.com/quotes-from-movies/the-lord-of-the-rings-the-fel"><i>Fool of a Took. -Gandalf</i></blockquote>
+<img style="width: 10%;" src="https://cdn.glitch.com/30e1a553-26a7-4c81-81be-74f507c3c666%2Fme.jpg?v=1600289460289" alt="moose">
+
+<h2 style="font: caption;">My Schedule</h2>
+<table>
+    <tr>
+        <th>Course # and Section</th>
+        <th>Course Description</th>
+        <th>Class Time and Location</th>
+    </tr>
+    <tr>
+        <td>REL 324-02</td>
+        <td>Doctrine and Covenants first half</td>
+        <td>MW-09:00-10:00AM <b>WEB</b></td>
+    </tr>
+    <tr>
+        <td>REL 324-02</td>
+        <td>Foundations of the Restoration</td>
+        <td>MW-11:30AM-12:30PM <b>WEB</b></td>
+    </tr>
+    <tr>
+        <td>CS 213-01</td>
+        <td>Web Engineering I</td>
+        <td>-00:00-00:00AM <b>WEB</b></td>
+    </tr>
+    <tr>
+        <td>CIT 225-01</td>
+        <td>Database Design & Development</td>
+        <td>MWF-12:45-01:45PM <b>WEB</b></td>
+    </tr>
+</table>
+
+  
+</body>
+
 </html>
