🐯🚊 Checkpoint ./aboutme.html:22516587/236

--- a/aboutme.html
+++ b/aboutme.html
@@ -36,7 +36,9 @@ tr:nth-child(even) {
 
   <h1>Welcome to Jared Denning's Homepage</h1>
   <hr>
-  <p><a href="index.html" target="_blank"><b>Index</b></p></a>
+  <p>
+    <a href="index.html">Home</a>
+  </p>
   <hr>
   <p>About me</p>
   <ul>
@@ -45,7 +47,7 @@ tr:nth-child(even) {
       <li>From: District of Columbia</li>
   </ul>
 <blockquote cite="http://quotegeek.com/quotes-from-movies/the-lord-of-the-rings-the-fel"><i>Fool of a Took. -Gandalf</i></blockquote>
-<img style="width: 10%;" src="https://cdn.glitch.com/30e1a553-26a7-4c81-81be-74f507c3c666%2Fme.jpg?v=1600289460289" alt="moose">
+<img style="width: 20%;" src="https://cdn.glitch.com/30e1a553-26a7-4c81-81be-74f507c3c666%2Fme.jpg?v=1600289460289" alt="moose">
 
 <h2 style="font: caption;">My Schedule</h2>
 <table>
