🎒😂 Checkpoint ./aboutme.html:22516587/1697

--- a/aboutme.html
+++ b/aboutme.html
@@ -30,15 +30,23 @@ tr:nth-child(even) {
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link href="css/style.css" rel="stylesheet">
+  <title>All About Me</title>
 </head>
 
 <body>
 
-  <h1>Welcome to Jared Denning's Homepage</h1>
-  <hr>
+  <h1>About Me</h1>
+  <img style="width: 20%;" src="https://cdn.glitch.com/30e1a553-26a7-4c81-81be-74f507c3c666%2Fme.jpg?v=1600289460289" alt="moose">
   <p>
-    <a href="index.html">Home</a>
+    <b>Jared Denning</b>
   </p>
+  <hr>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="aboutme.html">About Me</a></li>
+      </ul>
+    </nav>
   <hr>
   <p>About me</p>
   <ul>
@@ -46,8 +54,11 @@ tr:nth-child(even) {
       <li>Major: Computer Science</li>
       <li>From: District of Columbia</li>
   </ul>
+  <p>
+    Career wise I want to emphasize on Computer Vision/Machine Learning, I just think these technologies will change our future and want to be a part of that! I'm a big rock climber/Backpacker/Hiker/Photographer so if you wanna adventure let me know! Always down to play soccer too. Here's a fun a quote!
+  </p>
 <blockquote cite="http://quotegeek.com/quotes-from-movies/the-lord-of-the-rings-the-fel"><i>Fool of a Took. -Gandalf</i></blockquote>
-<img style="width: 20%;" src="https://cdn.glitch.com/30e1a553-26a7-4c81-81be-74f507c3c666%2Fme.jpg?v=1600289460289" alt="moose">
+
 
 <h2 style="font: caption;">My Schedule</h2>
 <table>
