😇🗾 Checkpoint ./aboutme.html:22516587/888

--- a/aboutme.html
+++ b/aboutme.html
@@ -68,24 +68,34 @@ tr:nth-child(even) {
         <th>Class Time and Location</th>
     </tr>
     <tr>
-        <td>REL 324-02</td>
-        <td>Doctrine and Covenants first half</td>
-        <td>MW-09:00-10:00AM <b>WEB</b></td>
+        <td>CIT 111-01</td>
+        <td>Intro to Databases</td>
+        <td>MWF-10:15-11:15AM</td>
     </tr>
     <tr>
-        <td>REL 324-02</td>
-        <td>Foundations of the Restoration</td>
-        <td>MW-11:30AM-12:30PM <b>WEB</b></td>
+        <td>CIT 171-07</td>
+        <td>Intro to Cybersecurity</td>
+        <td>TR-04:30PM-05:30PM</td>
     </tr>
     <tr>
-        <td>CS 213-01</td>
-        <td>Web Engineering I</td>
-        <td>-00:00-00:00AM <b>WEB</b></td>
+        <td>CSE 250-02</td>
+        <td>Data Science Programming</td>
+        <td>TR-02:00PM-03:00PM</td>
     </tr>
     <tr>
-        <td>CIT 225-01</td>
-        <td>Database Design & Development</td>
-        <td>MWF-12:45-01:45PM <b>WEB</b></td>
+        <td>CSE 310-02</td>
+        <td>Applied Programming</td>
+        <td>MTWR -03:15-04:15PM</td>
+    </tr>
+    <tr>
+        <td>REL 275C-14</td>
+        <td>Teachings of Book of Mormon</td>
+        <td>TR -09:00-10:00AM</td>
+    </tr>
+    <tr>
+        <td>WDD 130-05</td>
+        <td>Web Fundamentals</td>
+        <td>TR -12:45-01:45PM</td>
     </tr>
 </table>
 
