--- a/aboutme.html
+++ b/aboutme.html
@@ -41,7 +41,7 @@ tr:nth-child(even) {
       </ul>
     </nav>
   <h1>About Me</h1>
-  <img style="width: 20%;" src="https://cdn.glitch.com/30e1a553-26a7-4c81-81be-74f507c3c666%2Fme.jpg?v=1600289460289" alt="moose">
+  <img style="width: 20%;" src="https://cdn.glitch.com/30e1a553-26a7-4c81-81be-74f507c3c666%2Fjared1.jpg?v=1610246246115​" alt="moose">
   <p>
     <b>Jared Denning</b>
   </p>
