--- a/site-plan.html
+++ b/site-plan.html
@@ -10,8 +10,8 @@
   <body>
     <header>
       <h1>[Dry Oar] Site Plan</h1>
-      <h2>FirstName LastName</h2>
-      <h2>WDD 130-[section]</h2>
+      <h2>Jared Denning</h2>
+      <h2>WDD 130-[05]</h2>
       <!-- In the header above, add your name and class number. For example if you are in section 3 you would put WDD 100.03 -->
     </header>
     <main>
@@ -20,7 +20,7 @@
       <h2>Overview</h2>
       <hr>
       <h3>Purpose</h3>
-      <p>[Your purpose here]</p>  <!-- change this -->
+      <p></p>  <!-- change this -->
 
 
       <h3>Audience</h3>
