⛩🌗 Checkpoint ./site-plan.html:22516587/183

--- a/site-plan.html
+++ b/site-plan.html
@@ -20,7 +20,7 @@
       <h2>Overview</h2>
       <hr>
       <h3>Purpose</h3>
-      <p></p>  <!-- change this -->
+      <p>This is the first website for the company, we are establishing an online presence/footprint to help guide online </p>  <!-- change this -->
 
 
       <h3>Audience</h3>
