🎊👮 Checkpoint ./site-plan.html:22516587/380

--- a/site-plan.html
+++ b/site-plan.html
@@ -20,11 +20,11 @@
       <h2>Overview</h2>
       <hr>
       <h3>Purpose</h3>
-      <p>This is the first website for the company, we are establishing an online presence/footprint to help guide online </p>  <!-- change this -->
+      <p>This is the first website for the company, we are establishing an online presence/footprint to help guide online white water rafting traffic to our facility.</p>  <!-- change this -->
 
 
       <h3>Audience</h3>
-      <p>[Your audience here]</p>  <!-- change this -->
+      <p>Routes vary from family friendly to experienced, so we want to attract a wide range of customers. Since </p>  <!-- change this -->
 
 
       <h2>Branding</h2>
