🌚🚁 Checkpoint ./site-plan.html:22516587/134

--- a/site-plan.html
+++ b/site-plan.html
@@ -24,7 +24,7 @@
 
 
       <h3>Audience</h3>
-      <p>Routes vary from family friendly to experienced, so we want to attract a wide range of customers. Since </p>  <!-- change this -->
+      <p>Routes vary from family friendly to experienced, so we want to attract a wide range of customers. Since this is colorado we hope to mainly attract younger active working class customers who can afford to have this kind of fun.</p>  <!-- change this -->
 
 
       <h2>Branding</h2>
