❤️🎋 Checkpoint ./site-plan.html:22516587/13526 ./site-plan.css:22516587/340

--- a/site-plan.html
+++ b/site-plan.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>Site Plan</title>
     <link type="text/css" rel="stylesheet" href="site-plan.css">
+    
   </head>
 
   <body>
@@ -61,17 +62,17 @@
       <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Why did you choose what you did?  Make sure to review the list of web safe fonts at W3Schools.org as a starting point.  Think also about which of your colors above you might use for background and font colors. -->
 
       <h4>
-        Heading Font: [Font Name here]  <!-- change this -->
+        Heading Font: [Oswald]  <!-- change this -->
       </h4>
       <p>
-        [Reasoning]  <!-- change this -->
+        [I chose Oswald as my heading font because it was thicker, and more attention grabbing while still being easier to read.]  <!-- change this -->
       </p>
 
       <h4>
-        Paragraph Font: [Font Name here]  <!-- change this -->
+        Paragraph Font: [Bodoni Moda]  <!-- change this -->
       </h4>
       <p>
-        [Reasoning]  <!-- change this -->
+        [This font is a little thinner, and I think it is easier to read with the spacing when the size is smaller]  <!-- change this -->
       </p>
 
       <h4>
