--- a/site-plan.html
+++ b/site-plan.html
@@ -96,8 +96,8 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav><ul>
         <li><a href="#">Home</a></li>
-        <li><a href="#">Page2</a></li>
-        <li><a href="#">Page3</a></li>
+        <li><a href="#">FAQ</a></li>
+        <li><a href="#">Contact</a></li>
         </ul></nav>
       <hr>
       <h2>
@@ -108,10 +108,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          FAQ <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          Contact  <!-- change this -->
         </div>
 
         <div class="top">
