🎮🌎 Checkpoint ./index.html:22516587/66

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
             </ul>
         </nav>
     </header>
+  <main>
+    <div class="banner-box">
+      
+    </div>
+  </main>
 </body>
 
 </html>
