--- a/index.html
+++ b/index.html
@@ -1,31 +1,33 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <title>WDD 130</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/styles.css">
-</head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="/styles.css" />
+  </head>
 
-<body>
+  <body>
     <header>
-        <div class="logo-box"><!-- logo will go here --></div>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="aboutme.html">About Me</a></li>
-              <li><a href="site-plan.html">Site Plan</a></li>
-              <li><a href="resources.html">Resources</a></li>
-            </ul>
-        </nav>
-    </header>
-  <main>
-    <div class="banner-box">
-      
-    </div>
-  </main>
-</body>
+      <img
+        src="https://brothert.net/dryoar/images/dryoarlogo.png"
+        alt="Dry Oar boating logo"
+      />
 
+      <div class="logo-box"><!-- logo will go here --></div>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="site-plan.html">Site Plan</a></li>
+          <li><a href="aboutme.html">About Me</a></li>
+          <li><a href="resources.html">Resources</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <div class="home-grid"></div>
+      <div class="banner-box"></div>
+    </main>
+    <footer></footer>
+  </body>
 </html>
-  
