🏰🍫 Checkpoint ./index.html:22516587/11882

--- a/index.html
+++ b/index.html
@@ -25,8 +25,49 @@
       </nav>
     </header>
     <main>
-      <div class="home-grid"></div>
-      <div class="banner-box"></div>
+      <div class="home-grid">
+        <h2 class="home-headline-1">
+          We run Rivers to relax
+        </h2>
+        <p class="home-paragraph-1">
+          We believe that there is nothing like a river trip for relaxing. That
+          is why we subscribe to the dry oar philosophy of boating. Keeping your
+          oars dry for us means taking time to look around and notice the beauty
+          that surrounds the rivers we love.
+        </p>
+        <img
+          src="https://cdn.glitch.com/30e1a553-26a7-4c81-81be-74f507c3c666%2Fik-rapid.jpg?v=1611426415359"
+          alt="raftingphoto"
+          class="home-right-img"
+        />
+        <h2 class="home-headline-2">
+          We run whitewater for the rush
+        </h2>
+        <p class="home-paragraph-2">
+          That doesn't mean we don't also like rapids. Opposites in all things
+          after all. We believe that that tenseness that comes when you are
+          looking down the tongue of a big string of waves makes you appreciate
+          the calm beautiful water that always follows even more.
+        </p>
+        <img
+          src="https://cdn.glitch.com/30e1a553-26a7-4c81-81be-74f507c3c666%2Fsalmon-kayak4.jpg?v=1611426407780"
+          alt="another picture"
+          class="home-left-img"
+        />
+        <section class="home-paragraph-3">
+          <h2>Come Run with us.</h2>
+          <p>
+            We invite you to come relax with us on one of the amazing rivers we
+            visit....
+          </p>
+        </section>
+      </div>
+      <div class="banner-box">
+        <img
+          src="https://cdn.glitch.com/30e1a553-26a7-4c81-81be-74f507c3c666%2Friver-wide.jpg?v=1611426411615"
+          alt="wide river raft photo"
+        />
+      </div>
     </main>
     <footer></footer>
   </body>
