😬🎑 Checkpoint ./index.html:22516587/10942

--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
       </nav>
     </header>
     <main>
+      <div class="banner-box">
+        <img
+          src="https://cdn.glitch.com/30e1a553-26a7-4c81-81be-74f507c3c666%2Friver-wide.jpg?v=1611426411615"
+          alt="wide river raft photo"
+        />
+      </div>
       <div class="home-grid">
         <h2 class="home-headline-1">
           We run Rivers to relax
@@ -62,13 +68,9 @@
           </p>
         </section>
       </div>
-      <div class="banner-box">
-        <img
-          src="https://cdn.glitch.com/30e1a553-26a7-4c81-81be-74f507c3c666%2Friver-wide.jpg?v=1611426411615"
-          alt="wide river raft photo"
-        />
-      </div>
     </main>
-    <footer></footer>
+    <footer>
+      <p>&copy; 2021 Dry Oar - Jared Denning - Section idk</p>
+    </footer>
   </body>
 </html>
