⛪️💫 Checkpoint ./styles.css:22516587/458 ./index.html:22516587/158

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           class="home-left-img"
         />
         <section class="home-paragraph-3">
-          <h2>Come Run with us.</h2>
+          <h2 class="home-headline-3">Come Run with us.</h2>
           <p>
             We invite you to come relax with us on one of the amazing rivers we
             visit....
