📈🏆 Checkpoint ./forms.html:22516587/39

--- a/forms.html
+++ b/forms.html
@@ -85,7 +85,7 @@
     </style>
   </head>
   <body>
-    <div id="feedback">
+    <div id="feedback"></div>
       <form action="my-handling-form-page" method="post">
         <ul>
           <li>
@@ -125,6 +125,5 @@
           document.body.classList.toggle("moveDown");
         });
       </script>
-    <p>This is my page</p>
   </body>
 </html>
