🍃🌝 Checkpoint ./index.html:22516587/6488 ./styles.css:22516587/1072

--- a/index.html
+++ b/index.html
@@ -70,13 +70,23 @@
       </div>
     </main>
     <footer>
-
       <p>&copy; 2021 Dry Oar - Jared Denning - Section idk</p>
-        <div class="social">
-        <a href="https://www.instagram.com/hewentto/"><img src ="https://cdn.glitch.com/30e1a553-26a7-4c81-81be-74f507c3c666%2Finstagram.png?v=1612068304236" alt="instagram"></a>
-        <a href="https://www.facebook.com/"><img src ="https://cdn.glitch.com/30e1a553-26a7-4c81-81be-74f507c3c666%2Ffaceb.png?v=1612068296926" alt="facebook"></a>
-        <a href="https://www.youtube.com"><img src ="https://cdn.glitch.com/30e1a553-26a7-4c81-81be-74f507c3c666%2Fyoutube.png?v=1612068304236" alt="youtube"></a>
-          
+      <div class="social">
+        <a href="https://www.instagram.com/hewentto/"
+          ><img
+            src="https://cdn.glitch.com/30e1a553-26a7-4c81-81be-74f507c3c666%2Finstagram.png?v=1612068304236"
+            alt="instagram"
+        /></a>
+        <a href="https://www.facebook.com/"
+          ><img
+            src="https://cdn.glitch.com/30e1a553-26a7-4c81-81be-74f507c3c666%2Ffaceb.png?v=1612068296926"
+            alt="facebook"
+        /></a>
+        <a href="https://www.youtube.com"
+          ><img
+            src="https://cdn.glitch.com/30e1a553-26a7-4c81-81be-74f507c3c666%2Fyoutube.png?v=1612068304236"
+            alt="youtube"
+        /></a>
       </div>
     </footer>
   </body>
