🏩📉 Checkpoint ./styles.css:22516587/536 ./index.html:22516587/6818

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 
   <body id="content">
     <header>
-      <img
-        src="https://brothert.net/dryoar/images/dryoarlogo.png"
-        alt="Dry Oar boating logo"
-      />
-
-      <div class="logo-box"><!-- logo will go here --></div>
+      <div class="logo-box">
+        <img
+          src="https://brothert.net/dryoar/images/dryoarlogo.png"
+          alt="Dry Oar boating logo"
+        />
+      </div>
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
