🎂🌸 Checkpoint ./styles.css:22516587/181 ./contact.html:22516587/1220 ./.glitch-assets:22516587/380

--- a/contact.html
+++ b/contact.html
@@ -35,24 +35,23 @@
         <h2 class="contact-headline-1">
           Hours
         </h2>
-        <p class="home-paragraph-1">
-          We believe that there is nothing like a river trip for relaxing. That
-          is why we subscribe to the dry oar philosophy of boating. Keeping your
-          oars dry for us means taking time to look around and notice the beauty
-          that surrounds the rivers we love.
-        </p>
+        <ul id="times">
+          <li>Monday: 7am - 5pm</li>
+          <li>Tuesday: 7am - 5pm</li>
+          <li>Wednesday: 7am - 5pm</li>
+          <li>Thursday: 7am - 5pm</li>
+          <li>Friday: 7am - 5pm</li>
+          <li>Saturday:: 7am - 5pm</li>
+        </ul>
 
-        <h2 class="home-headline-2">
-          We run whitewater for the rush
+        <h2 class="contact-headline-2">
+          Get In touch
         </h2>
-        <p class="home-paragraph-2">
-          That doesn't mean we don't also like rapids. Opposites in all things
-          after all. We believe that that tenseness that comes when you are
-          looking down the tongue of a big string of waves makes you appreciate
-          the calm beautiful water that always follows even more.
+        <p class="contact-paragraph-2">
+          There's a couple ways you can always 
         </p>
         <img
-          src="https://cdn.glitch.com/30e1a553-26a7-4c81-81be-74f507c3c666%2Fsalmon-kayak4.jpg?v=1611426407780"
+          src="https://cdn.glitch.com/30e1a553-26a7-4c81-81be-74f507c3c666%2Fcontact1.jpg?v=1616150826043"
           alt="another picture"
           class="home-left-img"
         />
