🏃💈 Checkpoint ./contact.html:22516587/5669 ./styles.css:22516587/5038 ./index.html:22516587/95

--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="site-plan.html">Site Plan</a></li>
           <li><a href="aboutme.html">About Me</a></li>
-          <li><a href="resources.html">Resources</a></li>
+          <li><a href="contact.html">Hours/Conact</a></li>
         </ul>
       </nav>
     </header>
@@ -48,20 +48,15 @@
           Get In touch
         </h2>
         <p class="contact-paragraph-2">
-          There's a couple ways you can always 
+          There's a couple ways you can always reach us during business
+          hours.<br />
+          Call us at: (564) 468-879.<br />Or Email us at: contact@dryoar.com
         </p>
         <img
           src="https://cdn.glitch.com/30e1a553-26a7-4c81-81be-74f507c3c666%2Fcontact1.jpg?v=1616150826043"
           alt="another picture"
           class="home-left-img"
         />
-        <section class="home-paragraph-3">
-          <h2 class="home-headline-3">Come Run with us.</h2>
-          <p>
-            We invite you to come relax with us on one of the amazing rivers we
-            visit....
-          </p>
-        </section>
       </div>
     </main>
     <footer>
