--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="site-plan.html">Site Plan</a></li>
           <li><a href="aboutme.html">About Me</a></li>
-          <li><a href="resources.html">Resources</a></li>
+          <li><a href="contact.html">Hours/Conact</a></li>
         </ul>
       </nav>
     </header>
