✋🎬 Checkpoint ./aboutme.html:22516587/4688

--- a/aboutme.html
+++ b/aboutme.html
@@ -1,105 +1,89 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <style>
+      h1 {
+        font: icon;
+        font-size: 250%;
+      }
+      table {
+        font-family: arial, sans-serif;
+        border-collapse: collapse;
+        width: 100%;
+      }
 
-<head>
-<style>
-h1 {
-    font: icon;
-    font-size: 250%;
-}
-table {
-  font-family: arial, sans-serif;
-  border-collapse: collapse;
-  width: 100%;
-}
+      td,
+      th {
+        border: 1px solid #dddddd;
+        text-align: left;
+        padding: 8px;
+      }
 
-td, th {
-  border: 1px solid #dddddd;
-  text-align: left;
-  padding: 8px;
-}
+      tr:nth-child(even) {
+        background-color: #dddddd;
+      }
+    </style>
+    <meta charset="utf-8" />
+    <title>Jared Denning's Homepage</title>
+    <meta name="author" content="" />
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-tr:nth-child(even) {
-  background-color: #dddddd;
-}
-</style>
-  <meta charset="utf-8">
-  <title>Jared Denning's Homepage</title>
-  <meta name="author" content="">
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="css/style.css" rel="stylesheet" />
+    <title>All About Me</title>
+  </head>
 
-  <link href="css/style.css" rel="stylesheet">
-  <title>All About Me</title>
-</head>
-
-<body>
+  <body>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="aboutme.html">About Me</a></li>
       </ul>
     </nav>
-  <h1>About Me</h1>
-  <img style="width: 20%;" src="https://cdn.glitch.com/30e1a553-26a7-4c81-81be-74f507c3c666%2Fjared1.jpg?v=1610246246115​" alt="moose">
-  <p>
-    <b>Jared Denning</b>
-  </p>
-  <hr>
+    <h1>About Me</h1>
+    <img
+      style="width: 20%;"
+      src="https://cdn.glitch.com/30e1a553-26a7-4c81-81be-74f507c3c666%2Fjared1.jpg?v=1610246246115​"
+      alt="moose"
+    />
+    <p>
+      <b>Jared Denning</b>
+    </p>
+    <hr />
 
-  <hr>
-  <p>About me</p>
-  <ul>
+    <hr />
+    <p>About me</p>
+    <ul>
       <li>Name: Jared Denning</li>
       <li>Major: Computer Science</li>
       <li>From: District of Columbia</li>
-  </ul>
-  <p>
-    Career wise I want to emphasize on Computer Vision/Machine Learning, I just think these technologies will change our future and want to be a part of that! I'm a big rock climber/Backpacker/Hiker/Photographer so if you wanna adventure let me know! Always down to play soccer too. Here's a fun a quote!
-  </p>
-<blockquote cite="http://quotegeek.com/quotes-from-movies/the-lord-of-the-rings-the-fel"><i>Fool of a Took. -Gandalf</i></blockquote>
+    </ul>
+    <p>
+      Career wise I want to emphasize on Computer Vision/Machine Learning, I
+      just think these technologies will change our future and want to be a part
+      of that! I'm a big rock climber/Backpacker/Hiker/Photographer so if you
+      wanna adventure let me know! Always down to play soccer too. Here's a fun
+      a quote!
+    </p>
+    <blockquote
+      cite="http://quotegeek.com/quotes-from-movies/the-lord-of-the-rings-the-fel"
+    >
+      <i>Fool of a Took. -Gandalf</i>
+    </blockquote>
 
-
-<h2 style="font: caption;">My Schedule</h2>
-<table>
-    <tr>
+    <h2 style="font: caption;">My Schedule</h2>
+    <table>
+      <tr>
         <th>Course # and Section</th>
         <th>Course Description</th>
         <th>Class Time and Location</th>
-    </tr>
-    <tr>
-        <td>CIT 111-01</td>
-        <td>Intro to Databases</td>
-        <td>MWF-10:15-11:15AM</td>
-    </tr>
-    <tr>
-        <td>CIT 171-07</td>
-        <td>Intro to Cybersecurity</td>
-        <td>TR-04:30PM-05:30PM</td>
-    </tr>
-    <tr>
-        <td>CSE 250-02</td>
-        <td>Data Science Programming</td>
-        <td>TR-02:00PM-03:00PM</td>
-    </tr>
-    <tr>
-        <td>CSE 310-02</td>
-        <td>Applied Programming</td>
-        <td>MTWR -03:15-04:15PM</td>
-    </tr>
-    <tr>
-        <td>REL 275C-14</td>
-        <td>Teachings of Book of Mormon</td>
-        <td>TR -09:00-10:00AM</td>
-    </tr>
-    <tr>
-        <td>WDD 130-05</td>
+      </tr>
+
+      <tr>
+        <td>WDD 130-06</td>
         <td>Web Fundamentals</td>
-        <td>TR -12:45-01:45PM</td>
-    </tr>
-</table>
-
-  
-</body>
-
+        <td>ONLINE</td>
+      </tr>
+    </table>
+  </body>
 </html>
