🌉🎢 Checkpoint ./aboutme.html:22516587/7

--- a/aboutme.html
+++ b/aboutme.html
@@ -44,7 +44,7 @@
     <img
       style="width: 20%;"
       src="https://cdn.glitch.com/30e1a553-26a7-4c81-81be-74f507c3c666%2Fjared1.jpg?v=1610246246115​"
-      alt="moose"
+      alt="me"
     />
     <p>
       <b>Jared Denning</b>
